--- a/tarea_3.1/votaciones_bandas/pubspec.yaml
+++ b/tarea_3.1/votaciones_bandas/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   firebase_core: 2.30.0
   firebase_storage: 11.7.2
+  cloud_firestore: 4.17.0
   image_picker: ^1.1.0
 
 dev_dependencies:
